--- a/.github/workflows/sonarcloud.yaml
+++ b/.github/workflows/sonarcloud.yaml
@@ -9,6 +9,7 @@ jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
+    working-directory: ./Samples/PublicSamples/RecordingBot/src
     steps:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
