--- a/Samples/V1.0Samples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/CRWorkerRole.csproj
+++ b/Samples/V1.0Samples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/CRWorkerRole.csproj
@@ -33,7 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Services.Client" Version="5.8.4" />
+    <PackageReference Include="Microsoft.Data.Services.Client" Version="5.8.5" />
     <PackageReference Include="Microsoft.Owin.Host.HttpListener" Version="4.2.0" />
     <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.20.0.348-alpha" />
     <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
@@ -75,17 +75,9 @@
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-
-  <Target
-    Name="BuiltProjectOutputGroupDependencies"
-    DependsOnTargets="$(BuiltProjectOutputGroupDependenciesDependsOn)"
-    Returns="@(BuiltProjectOutputGroupDependency)">
+  <Target Name="BuiltProjectOutputGroupDependencies" DependsOnTargets="$(BuiltProjectOutputGroupDependenciesDependsOn)" Returns="@(BuiltProjectOutputGroupDependency)">
     <ItemGroup>
-      <BuiltProjectOutputGroupDependency Include="@(ReferenceCopyLocalPaths->'%(FullPath)');
-                                              @(ReferenceDependencyPaths->'%(FullPath)');
-                                              @(NativeReferenceFile->'%(FullPath)');
-                                              @(_DeploymentLooseManifestFile->'%(FullPath)');
-                                              @(ResolvedIsolatedComModules->'%(FullPath)')"/>
+      <BuiltProjectOutputGroupDependency Include="@(ReferenceCopyLocalPaths->'%(FullPath)');&#xD;&#xA;                                              @(ReferenceDependencyPaths->'%(FullPath)');&#xD;&#xA;                                              @(NativeReferenceFile->'%(FullPath)');&#xD;&#xA;                                              @(_DeploymentLooseManifestFile->'%(FullPath)');&#xD;&#xA;                                              @(ResolvedIsolatedComModules->'%(FullPath)')" />
     </ItemGroup>
   </Target>
 </Project>
