--- a/Samples/Graph.props
+++ b/Samples/Graph.props
@@ -7,7 +7,7 @@
   
   <PropertyGroup Condition="'$(MSBuildProjectExtension)' == '.csproj' Or '$(MSBuildProjectExtension)' == '.ccproj' ">
     <!--Binding redirects fix issues with incorrect versions of nuget packages. These lines autogenerate them.-->
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
   </PropertyGroup>
 
