--- a/Samples/BetaSamples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/CRWorkerRole.csproj
+++ b/Samples/BetaSamples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/CRWorkerRole.csproj
@@ -1,27 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Graph.props" />
+  
   <PropertyGroup>
-	<RoleType>Worker</RoleType>
-	<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-	<ProjectGuid>{EAF11F22-C267-4C02-820D-12B622FEBFC1}</ProjectGuid>
-	<OutputType>Library</OutputType>
-	<AppDesignerFolder>Properties</AppDesignerFolder>
-	<RootNamespace>Sample.PolicyRecordingBot.WorkerRole</RootNamespace>
-	<AssemblyName>Sample.PolicyRecordingBot.WorkerRole</AssemblyName>
-	  <TargetFramework>net6.0</TargetFramework>
-	<FileAlignment>512</FileAlignment>
-	<NuGetPackageImportStamp>
-	</NuGetPackageImportStamp>
-	  <NoWarn>NU1701</NoWarn>
-  </PropertyGroup>
-	
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
     <RoleType>Worker</RoleType>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{EAF11F22-C267-4C02-820D-12B622FEBFC1}</ProjectGuid>
     <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sample.PolicyRecordingBot.WorkerRole</RootNamespace>
     <AssemblyName>Sample.PolicyRecordingBot.WorkerRole</AssemblyName>
+    <TargetFramework>net6.0</TargetFramework>
+    <FileAlignment>512</FileAlignment>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AssemblyTitle>WorkerRole</AssemblyTitle>
     <Company>Microsoft Corporation</Company>
@@ -31,7 +21,7 @@
     <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
   
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -39,7 +29,8 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
@@ -47,12 +38,12 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Services.Client" Version="5.8.5" />
     <PackageReference Include="Microsoft.Owin.Host.HttpListener" Version="4.2.2" />
     <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.26.0.94-alpha" />
-    
-	  <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.16.1" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.16.1" />
     <PackageReference Include="Microsoft.WindowsAzure.SDK" Version="2.9.0" />
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3"/>
@@ -60,6 +51,7 @@
     <Reference Include="MonAgentListener, Version=33.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Configuration" />
   </ItemGroup>
+  
   <ItemGroup>
     <None Include="app.config">
       <SubType>Designer</SubType>
@@ -69,6 +61,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Common\Sample.Common.Beta\Sample.Common.Beta.csproj">
       <Project>{88b67fbe-6de8-4dc3-83cf-9f6b4ea10138}</Project>
@@ -79,14 +72,13 @@
       <Name>CRFrontEnd</Name>
     </ProjectReference>
   </ItemGroup>
+  
   <ItemGroup>
     <Content Include="VC_redist.x64.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-	<!--
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
--->
+  
   <Target
     Name="BuiltProjectOutputGroupDependencies"
     DependsOnTargets="$(BuiltProjectOutputGroupDependenciesDependsOn)"
